# dotstate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  PUBLISHING.md  README.md  SECURITY.md  instructions.md  restore_backups.sh
.claude/commands/: publish.md
.claude/skills/dotstate-dev/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  homebrew.yml  release.yml  test-cross-compile.yml
.llm_docs/: OPEN_SOURCE_CHECKLIST.md
Formula/: dotstate.rb
docs/plans/: 2026-01-25-app-rs-refactor-design.md
examples/: keymap_override_example.toml
src/: app.rs  cli.rs  config.rs  dotfile_candidates.rs  file_manager.rs  git.rs  github.rs  icons.rs  lib.rs  main.rs  styles.rs  ui.rs  version_check.rs
src/cli/: common.rs  completions.rs  legacy.rs  mod.rs  packages.rs
src/components/: component.rs  dialog.rs  dotfile_selection.rs  file_browser.rs  file_preview.rs  footer.rs  github_auth.rs  header.rs  help_overlay.rs  input_field.rs  main_menu.rs  message.rs  message_box.rs  mod.rs  package_manager.rs  popup.rs  profile_manager.rs  profile_selection_popup.rs  push_changes.rs  synced_files.rs  welcome.rs
src/keymap/: actions.rs  binding.rs  mod.rs  presets.rs
src/screens/: dotfile_selection.rs  github_auth.rs  main_menu.rs  manage_packages.rs  manage_profiles.rs  mod.rs  profile_selection.rs  screen_trait.rs  settings.rs  storage_setup.rs  sync_with_remote.rs  view_synced_files.rs
src/services/: git_service.rs  mod.rs  package_service.rs  profile_service.rs  storage_setup_service.rs  sync_service.rs
src/state/: global.rs  mod.rs  screen.rs
src/utils/: backup_manager.rs  doctor.rs  form.rs  list_navigation.rs  mod.rs  package_cache.rs  package_discovery.rs  package_installer.rs  package_manager.rs  path.rs  profile_manifest.rs  profile_validation.rs  style.rs  symlink_manager.rs  sync_validation.rs  syntax_theme.rs  text_input.rs  versioned.rs
src/widgets/: dialog.rs  logo.rs  menu.rs  mod.rs  text_input.rs  toast.rs
tests/: e2e_sync.rs  integration_add_file.rs  stress_test_validation.rs  test_example_config.rs  test_keymap_overrides.rs  test_override_shadowing.rs  workflow_onboarding.rs  workflow_profiles.rs  workflow_sync.rs
tests/common/: mod.rs
website/: .gitignore  README.md  _headers  astro.config.mjs  index.html  install.sh  package-lock.json  package.json  update-version.sh  vercel.json
website/public/: install.sh  robots.txt  sitemap.xml
website/src/components/: CodeBlock.astro  CommandCard.astro  Comparison.astro  ContribCard.astro  ContribGrid.astro  ExampleCard.astro  FeatureCard.astro  FeatureGrid.astro  InstallWidget.astro  SectionHeader.astro  SecurityCard.astro  StatusGrid.astro  Step.astro  Tip.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
