[package]
name = "dotstate"
version = "0.1.14"
edition = "2021"
authors = ["Serkan Yersen"]
description = "A modern, secure, and user-friendly dotfile manager built with Rust"
license = "MIT"
repository = "https://github.com/serkanyersen/dotstate"
homepage = "https://dotstate.serkan.dev"
documentation = "https://dotstate.serkan.dev/#quickstart"
keywords = ["dotfiles", "tui", "sync", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Git operations
git2 = { version = "0.20", features = ["vendored-openssl"] }

# Configuration
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GitHub API
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }

# File operations
dirs = "6"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Syntax highlighting for previews
syntect = "5.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Version checking
update-informer = { version = "1.1", default-features = false, features = ["github", "ureq", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "dotstate"
path = "src/main.rs"
